--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body{
     margin:0;
 }
 
-/*Navigation Bar Styling*/
+/*-- Navigation Bar Styling-- */
 div.navBar{
     background-color: white;
     width:100%;
@@ -32,3 +32,15 @@ nav{
     padding: 0 7px;
     text-decoration: none;
 }
+
+#myName{
+    background-color:goldenrod;
+    color:#fff;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    font-size: 1.5em;
+    padding:23.5px;
+    margin:0;
+    position:relative;
+}
+/*-- End Navigation Bar Styling-- */
