--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: lightgray;
+    background-image:url("../images/funky-lines.png");
+    background-repeat: repeat;
     margin:0;
 }
 
@@ -7,7 +8,7 @@ body{
 div.navBar{
     background-color: white;
     width:100%;
-    border-bottom: solid 2px #afadad;
+    border-bottom: solid 2px #ccc;
     float:left;
     height: 75px;
 }
