--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body{
     margin:0;
 }
 
+
 /*-- Navigation Bar Styling-- */
 div.navBar{
     background-color: white;
@@ -11,15 +12,12 @@ div.navBar{
     border-bottom: solid 2px #ccc;
     float:left;
     height: 75px;
+    margin-bottom:30px;
 }
 
 #navItems{
     width:960px;
     margin:0 auto;
-}
-
-#myName{
-    float:left;
 }
 
 nav{
@@ -35,6 +33,7 @@ nav{
 }
 
 #myName{
+    float:left;
     background-color:goldenrod;
     color:#fff;
     font-family:Arial, Helvetica, sans-serif;
@@ -45,3 +44,46 @@ nav{
     position:relative;
 }
 /*-- End Navigation Bar Styling-- */
+
+/*-- Start Body Content Styling--*/
+
+div.contentBlock{
+    clear:both;
+    width:960px;
+    margin:0 auto;
+    background-color:#fff;
+    border: solid 1px #ccc;
+}
+
+div.contentFormat{
+   padding: 20px 25px;
+}
+
+header{
+    color:goldenrod;
+    font-size:1.5em;
+    font-family:'Georgia', Times, Times New Roman, serif;
+    font-weight:bold;
+    padding:15px 0;
+}
+
+hr{
+    background-color:#ccc;
+    height: 3px;
+    border:none;
+
+}
+img#selfie{
+    width:20%;
+    height:auto;
+    float:left;
+    padding:10px 20px 0 0;
+}
+
+p, p#aboutMe{
+    font-size:1em;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 1.5;
+    color: #777;
+}
+/*--END Body Content Styling*/
