--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ body{
     background-image:url("../images/funky-lines.png");
     background-repeat: repeat;
     margin:0;
+    /*--This control sticky footer*/
+    min-height:100vh;
+    display:grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 
@@ -52,7 +56,8 @@ div.contentBlock{
     width:960px;
     margin:0 auto;
     background-color:#fff;
-    border: solid 1px #ccc;
+    border: solid 1px #ddd;
+    margin-bottom:150px; /*in this case it goes to the bottom of the page*/
 }
 
 div.contentFormat{
@@ -86,4 +91,19 @@ p, p#aboutMe{
     line-height: 1.5;
     color: #777;
 }
-/*--END Body Content Styling*/
+/*--END Body Content Styling--*/
+
+/*-- Start Footer Styling--*/
+footer{
+    background-color:#666;
+    width:100%;
+    border-top: solid 6px goldenrod;
+    height: 60px;
+}
+
+footer p{
+    text-align: center;
+    color:white;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: .8em; 
+}
