--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,27 @@ footer p{
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: .8em; 
 }
+
+/*-- Start Form Styling-- */
+input, textarea{
+    width:100%;
+    margin-bottom:5px;
+}
+
+input#button{
+    width:80px;
+    color:white;
+    background-color:goldenrod;
+    padding:5px 15px;
+    border:0;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: .8em; 
+    font-weight: bold;
+}
+
+form p{
+    font-size:.9em;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
+    margin:0;
+}
