--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ div.contentBlock{
     margin:0 auto;
     background-color:#fff;
     border: solid 1px #ddd;
-    margin-bottom:150px; /*in this case it goes to the bottom of the page*/
+    margin-bottom:auto; /*in this case it goes to the bottom of the page*/
 }
 
 div.contentFormat{
@@ -107,6 +107,7 @@ footer p{
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: .8em; 
 }
+/*-- END Foorter Styling--*/
 
 /*-- Start Form Styling-- */
 input, textarea{
@@ -131,3 +132,4 @@ form p{
     color: #777;
     margin:0;
 }
+/*-- END Form Styling-- */
