--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body{
     background-image:url("../images/funky-lines.png");
     background-repeat: repeat;
     margin:0;
-    /*--This control sticky footer*/
+    /*--This pushes sticky footer down when content is added*/
     min-height:100vh;
     display:grid;
     grid-template-rows: auto 1fr auto;
@@ -51,6 +51,8 @@ nav{
 
 /*-- Start Body Content Styling--*/
 
+    /*-- Content Box --*/
+
 div.contentBlock{
     clear:both;
     width:960px;
@@ -60,6 +62,7 @@ div.contentBlock{
     margin-bottom:auto; /*This auto controls spacing between footer and bottom of the block*/
 }
 
+    /*-- Box Content Items --*/
 div.contentFormat{
    padding: 20px 25px;
 }
@@ -78,6 +81,7 @@ hr{
     border:none;
 
 }
+    /*-- About Page Content --*/
 img#selfie{
     width:20%;
     height:auto;
@@ -91,25 +95,8 @@ p, p#aboutMe{
     line-height: 1.5;
     color: #777;
 }
-/*--END Body Content Styling--*/
 
-/*-- Start Footer Styling--*/
-footer{
-    background-color:#666;
-    width:100%;
-    border-top: solid 6px goldenrod;
-    height: 60px;
-}
-
-footer p{
-    text-align: center;
-    color:white;
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: .8em; 
-}
-/*-- END Foorter Styling--*/
-
-/*-- Start Form Styling-- */
+    /*-- Form Page Styling-- */
 input, textarea{
     width:100%;
     margin-bottom:5px;
@@ -132,4 +119,21 @@ form p{
     color: #777;
     margin:0;
 }
-/*-- END Form Styling-- */
+
+/*--END Body Content Styling--*/
+
+/*-- Start Footer Styling--*/
+footer{
+    background-color:#666;
+    width:100%;
+    border-top: solid 6px goldenrod;
+    height: 60px;
+}
+
+footer p{
+    text-align: center;
+    color:white;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: .8em; 
+}
+/*-- END Foorter Styling--*/
