--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,11 @@ nav{
     text-decoration: none;
 }
 
+#navLeft:hover, #navMid:hover, #navRight:hover{
+    color:goldenrod;
+    font-weight:bold;
+}
+
 #myName{
     float:left;
     background-color:goldenrod;
@@ -59,7 +64,7 @@ div.contentBlock{
     margin:0 auto;
     background-color:#fff;
     border: solid 1px #ddd;
-    margin-bottom:auto; /*This auto controls spacing between footer and bottom of the block*/
+    margin-bottom:100px; /*This controls spacing between this block and next block (which is the footer in this case)*/
 }
 
     /*-- Box Content Items --*/
@@ -120,6 +125,9 @@ form p{
     margin:0;
 }
 
+/*-- Portfolio Styling-- */
+
+
 /*--END Body Content Styling--*/
 
 /*-- Start Footer Styling--*/
@@ -136,4 +144,4 @@ footer p{
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: .8em; 
 }
-/*-- END Foorter Styling--*/
+/*-- END Footer Styling--*/
