--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,21 @@ body{
     background-image:url("../images/funky-lines.png");
     background-repeat: repeat;
     margin:0;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     /*--This pushes sticky footer down when content is added*/
     min-height:100vh;
     display:grid;
     grid-template-rows: auto 1fr auto;
+}
+
+/*-- Minor Aesthetics --*/
+a{
+    color: goldenrod;
+}
+
+a:hover{
+    font-weight:bold;
+    color:darkgoldenrod;
 }
 
 
@@ -30,7 +41,6 @@ nav{
 }
 
 #navLeft, #navMid, #navRight{
-    font-family:  Arial, Helvetica, sans-serif;
     color:#afadad;
     padding: 0 7px;
     text-decoration: none;
@@ -45,7 +55,6 @@ nav{
     float:left;
     background-color:goldenrod;
     color:#fff;
-    font-family:Arial, Helvetica, sans-serif;
     font-weight:bold;
     font-size: 1.5em;
     padding:23.5px;
@@ -64,7 +73,7 @@ div.contentBlock{
     margin:0 auto;
     background-color:#fff;
     border: solid 1px #ddd;
-    margin-bottom:100px; /*This controls spacing between this block and next block (which is the footer in this case)*/
+    margin-bottom:auto; /*This controls spacing between this block and next block (which is the footer in this case)*/
 }
 
     /*-- Box Content Items --*/
@@ -96,7 +105,6 @@ img#selfie{
 
 p, p#aboutMe{
     font-size:1em;
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 1.5;
     color: #777;
 }
@@ -113,19 +121,45 @@ input#button{
     background-color:goldenrod;
     padding:5px 15px;
     border:0;
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: .8em; 
     font-weight: bold;
 }
 
 form p{
     font-size:.9em;
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
     margin:0;
 }
 
 /*-- Portfolio Styling-- */
+table{
+    margin: 30px 0;
+}
+
+td{
+    padding: 0 20px 20px 0;
+    max-width:320px;
+}
+
+.cellBlock{
+    position:relative
+}
+
+.textOverlay{
+    position:absolute;
+    bottom: 10%;
+    color:white;
+    text-align: center;
+    background-color:goldenrod;
+    width:260px;
+    padding: 20px;
+    opacity:.8;
+}
+
+.textOverlay:hover{
+    font-weight:bolder;
+    opacity:1;
+}
 
 
 /*--END Body Content Styling--*/
@@ -136,12 +170,12 @@ footer{
     width:100%;
     border-top: solid 6px goldenrod;
     height: 60px;
+    margin-top:50px; /* controls minimum margin between last block before footer*/
 }
 
 footer p{
     text-align: center;
     color:white;
-    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: .8em; 
 }
 /*-- END Footer Styling--*/
